<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_show_or_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_show_or_hide">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_set_idle_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_idle_time" />

            <Button
                android:id="@+id/btn_set_auto_recycle_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_auto_recycle_time" />

            <Button
                android:id="@+id/btn_get_auto_recycle_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_auto_recycle_time" />

            <Button
                android:text="@string/switch_background"
                android:id="@+id/btn_switch_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/switch_foreground"
                android:id="@+id/btn_switch_foreground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/screen_shot"
                android:id="@+id/btn_screen_shot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/screen_record"
                android:id="@+id/btn_screen_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/get_focused_window_app"
                android:id="@+id/btn_get_focused_window_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_show_or_hide_nav_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="导航栏"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/teal_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>